<resources>
    <string name="app_name">MUSEUM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="museum">"MUSEUM"</string>
    <string name="welcome_back">WELCOME BACK!</string>
    <string name="log_in">Log In</string>
    <string name="sing_up">Sing Up</string>
    <string name="welcome_museum">Welcome to MUSEUM</string>
    <string name="have_account">You Don`t have an account?</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="Pass_infirmation">Password Confirmation</string>
    <string name="select_avatar">Select an Avatar.</string>
    <string name="chose_file">Or. chose a file</string>
    <string name="no_file">No file chosen</string>
    <string name="sing_me_up">Sing Me Up!</string>
    <string name="A_have_account">Already have an account?</string>
    <string name="log_out">Log Out</string>
    <string name="update_account">Update My Account</string>
    <string name="purchase">Purchases</string>
    <string name="edit_account">Edit Account</string>
    <string name="update_image">Update Image</string>
    <string name="select_image">Select Image</string>
    <string name="name">Name</string>
    <string name="save">Save</string>

    <string name="attendance_time">Attendance Date</string>
    <string name="purchase_time">Purchase time:</string>
    <string name="quantity">Quantity:</string>
    <string name="schedule">Schedule:</string>
    <string name="total">Total:</string>
    <string name="edit">Edit!</string>
    
    <string name="performance">Performance</string>
    <string name="price">Price</string>
    <string name="duration">Duration</string>
    <string name="buy_your_ticket">Buy Your Ticket</string>
    <string name="pick_a_data">Pick a Data</string>
    <string name="selected_date">Selected Date</string>
    <string name="choose_your_schedule">Choose Your Schedule</string>
    <string name="buy_now">Buy Now</string>
    <string name="totals">Total:</string>

    <string name="calendar">Calendar</string>
</resources>
