<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="391dp"
        android:layout_height="711dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/txt_purchase_name"
            android:layout_width="61dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:text="@string/schedule"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_name"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attendance_time"
            app:layout_constraintEnd_toEndOf="@+id/txt_purchase_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_purchase_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_name" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/btn_edit_purchase"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="@+id/textView20"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_time"
            app:layout_constraintEnd_toEndOf="@+id/textView18"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/txt_purchase_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            app:layout_constraintEnd_toEndOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>