<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyActivity">

    <ImageView
        android:id="@+id/iv_activity_buy_activity"
        android:layout_width="0dp"
        android:layout_height="239dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/artwork1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_activity_buy_activity">

        <TextView
            android:id="@+id/tv_activity_name_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/performance"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="28sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_activity_price_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tv_activity_duration_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:text="@string/duration" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/pick_a_data" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/selected_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_selected_date_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="hola"
                android:textAlignment="center"
                android:layout_weight="3"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/choose_your_schedule" />

            <Spinner
                android:id="@+id/sp_schedules"
                android:layout_width="wrap_content"
                android:layout_weight="4"
                android:textAlignment="center"

                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"

                android:text="@string/quantity" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"

                android:text="@string/totals" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/np_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_performance_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center|center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="300.00" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_buy_purchase"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/buy_now" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>